--- a/src/index.html
+++ b/src/index.html
@@ -92,5 +92,27 @@
       </div>
     </div>
   </div>
+
+  <div class="consultation">
+    <div class="container">
+
+       <h2 class="title title_left">
+        Получите бесплатную консультацию <br>
+        по подбору пульсометра 
+       </h2>
+       <div class="consultation__descr">
+        Просто заполните форму заявки<br>
+        и мы перезвоним вам в течении 10 минут
+       </div>
+       <form class="feed-form" action="#">
+          <input name="name" required placeholder="Ваше имя" value="Vlad" type="text">
+          <input name="phone" required placeholder="Ваш телефон" value="+380" type="number">
+          <input name="email" required placeholder="Ваш E-mail" value="vladich@gmail.com" type="email">
+
+          <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+       </form>
+
+    </div>
+  </div>
 </body>
 </html>
