--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="header__contacts">
           <a href="tel:+74999228974 " class="header__phone">+7 (499) 922-89-74 </a>
-          <button class="button">заказать звонок</button>
+          <button data-modal="consultation" class="button">заказать звонок</button>
 
         </div>
       </header>
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+        <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
         <div class="promo__link">
           или
           <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -105,10 +105,10 @@
         Просто заполните форму заявки<br>
         и мы перезвоним вам в течении 10 минут
        </div>
-       <form class="feed-form" action="#">
-          <input name="name" required placeholder="Ваше имя" value="Vlad" type="text">
-          <input name="phone" required placeholder="Ваш телефон" value="+380" type="number">
-          <input name="email" required placeholder="Ваш E-mail" value="vladich@gmail.com" type="email">
+       <form id="consultation-form" class="feed-form" action="#">
+          <input name="name" required placeholder="Ваше имя" value="" type="text">
+          <input name="phone" required placeholder="Ваш телефон" value="">
+          <input name="email" required placeholder="Ваш E-mail" value="" type="email">
 
           <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
        </form>
@@ -146,7 +146,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT2</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -204,7 +204,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT2</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -233,7 +233,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT3</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -262,7 +262,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -322,7 +322,7 @@
           <div class="catalog-item__wrapper">
             <div class="catalog-item__content catalog-item__content_active">
               <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-              <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+              <div class="catalog-item__subtitle">Пульсометр Polar FT5</div>
               <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
               <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
             </div>
@@ -479,9 +479,48 @@
     </div>
   </footer>
 
+  <div class="overlay">
+    <div class="modal" id="consultation">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Просто заполните форму заявки</div>
+      <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+      <form class="feed-form feed-form_mt25" action="#">
+        <input name="name" required placeholder="Ваше имя" value="" type="text">
+        <input name="phone" required placeholder="Ваш телефон" value="">
+        <input name="email" required placeholder="Ваш E-mail" value="" type="email">
+
+        <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+     </form>
+    </div>
+
+    <div class="modal" id="order">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Ваш заказ:</div>
+      <div class="modal__descr">Пульсометр Polar FT1</div>
+      <form class="feed-form feed-form_mt25" action="#">
+        <input name="name" required placeholder="Ваше имя" value="Vlad" type="text">
+        <input name="phone" required placeholder="Ваш телефон" value="+380">
+        <input name="email" required placeholder="Ваш E-mail" value="vladich@gmail.com" type="email">
+
+        <button class="button button_submit">Купить</button>
+     </form>
+    </div>
+
+    <div class="modal modal_mini" id="thanks">
+      <div class="modal__close">&times;</div>
+      <div class="modal__subtitle">Спасибо за вашу заявку! </div>
+      <div class="modal__descr">Наш менеджер свяжется с вами 
+        в ближайшее время!</div>
+    </div>
+
+  </div>
+
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/slick.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/messages_ru.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
 </body>
 </html>
